Fix layout bug definitive

--- a/public/stylchat.css
+++ b/public/stylchat.css
@@ -4,6 +4,15 @@ html, body{
     font: 100% Helvetica, Arial; 
     background-color:#2D3142 !important;
 }
+nav{flex: 0 1 auto !important;}
+div{
+        display: block;
+}
+#convo{
+        display: flex;
+        flex-flow: column;
+        height: 100%;
+}
 #divform {
         background-color: #ffffff;
         width: 100%;
@@ -16,13 +25,8 @@ html, body{
         width: 70%; padding: 0.1%;
 }
 form#chatForm {
-        display: flex;
-        flex-flow: column;
-        flex: auto;
         width: 100%;
-        position: sticky;
-        bottom: 0;
-        margin: 0;
+        flex: 0 1 auto;
 }
 #divbtn {float:left; margin-left: 0%; width: 30%; padding:0.1%;}
 #divbtn button {width: 100% !important; clear: left;margin-left: 0;}
@@ -32,11 +36,9 @@ form#chatForm {
         padding: 0%;
 }
 #zoneAffichage{
-        display: flex;
-        flex-flow: column;
         flex: 1 1 auto;
-        height: calc( 100vh / 1.157 );
         overflow-y: scroll;
+        width: 100%;
 }
 #messages li {
         width: 100%;
